src/main/resources/1.21.5/redis-statefulset.yaml
# wget -c https://raw.githubusercontent.com/1030907690/public-script/master/docker/redis.conf
# 从本地文件创建ConfigMap kubectl create cm redis-conf --from-file=redis.conf
# 修改 kubectl edit cm redis-conf  ，也可以先删除 kubectl delete cm redis-conf 再从本地文件创建
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-statefulset
spec:
  replicas: 1
  serviceName: redis-statefulset
  selector:
    matchLabels:
      app: redis-statefulset
  template:
    metadata:
      labels:
        app: redis-statefulset
    spec:
      containers:
        - name: redis
          image: redis:5.0.7
          imagePullPolicy: IfNotPresent
          command:
            - redis-server
            - "/redis-conf/redis.conf"  #指的是redis容器内部的位置
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /redis-conf
            # 同步宿主机时间
            - name: host-time
              mountPath: /etc/localtime
              readOnly: true
      volumes:
        - name: data
          emptyDir: {}
        - name: host-time
          hostPath:
            path: /etc/localtime
        - name: config
          configMap:
            name: redis-conf
            items:
              - key: redis.conf
                path: redis.conf
